# poetry-plugin-compat-env-py2

./: .flake8  README.md  pyproject.toml
.github/workflows/: main.yml
src/poetry_plugin_compat_env_py2/: plugins.py
tests/: test_plugin_monkey_patch.py
